# seren-ai-langgraph

./: CONTRIBUTING.md  README.md  TODO.md  agent.py  langgraph.json  project_summary.md  pyproject.toml  run_ai.py  run_in_terminal.py  run_langsmith_tests.py  shift_tools.py  task_tools.py  tool_node.py
agent/: agent.py
agent/local/: run_ai.py  run_in_terminal.py  test_supabase.py
agent/tools/: shift_tools.py  task_tools.py  tool_context_manager.py  tool_node.py
examples/: updating_graph_config.py
src/: agent.py  agent_state.py  config_schema.py  llm_config.py
src/database/: README.md  postgres_client.py  shifts.py  test_postgres_client.py
src/local/: run_ai.py  run_in_terminal.py  run_langsmith_tests.py
src/nodes/: node_file_processor.py  node_planner.py  node_response_generator.py  node_tool_caller.py
src/supabase/: supabase_client.py  supabase_file_methods.py  supabase_note_methods.py  test_supabase.py
src/tools/: ai_request_models.py  ai_tool_response_models.py  note_tools.py  shift_tools.py  task_tools.py  tool_context_manager.py  tool_node.py  tools.py
